# esp-ice

./: .gitmodules  CMakeLists.txt  README.md  esp-ice-Initial-libjuice-patch-for-WIP-e-spice.patch.txt  idf_component.yml
example/bridgenet/: CMakeLists.txt  README.md  espice.drawio  sdkconfig.defaults
example/bridgenet/main/: CMakeLists.txt  connectivity.c  espice.c  idf_component.yml
example/connect/: CMakeLists.txt
example/connect/main/: CMakeLists.txt  connectivity.c  espice.c
include/: hmac.h  ifaddrs.h
port/: getnameinfo.c  ifaddrs.c  juice_random.c
test/connectivity/: CMakeLists.txt  sdkconfig.defaults
test/connectivity/main/: CMakeLists.txt  connectivity.c  idf_component.yml  main.c
